--- a/src/style.css
+++ b/src/style.css
@@ -56,7 +56,7 @@ h3 {
   font-size: 36px;
   display: block;
   margin: 0% 0% 0% 52%;
-  -webkit-text-stroke: 1px grey;
+  -webkit-text-stroke: 1px black;
   -webkit-text-fill-color: #fff852;
 }
 
@@ -117,7 +117,7 @@ button:hover {
 #current-location-btn {
   padding: 5px 20px 5px 20px;
   box-sizing: border-box;
-  width: 400px;
+  width: 50%;
 }
 
 .search-btn {
@@ -128,9 +128,9 @@ button:hover {
 }
 
 #search-input {
-  width: 300px;
+  width: 25%;
 }
 
 #search-btn {
-  width: 100px;
+  width: 25%;
 }
