--- a/src/style.css
+++ b/src/style.css
@@ -57,8 +57,8 @@ h3 {
   font-size: 36px;
   display: block;
   margin: 0% 0% 0% 52%;
-  -webkit-text-stroke: 1px black;
-  -webkit-text-fill-color: #fff852;
+  -webkit-text-stroke: 0.1px black;
+  -webkit-text-fill-color: white;
 }
 
 form {
@@ -118,7 +118,7 @@ button:hover {
 #current-location-btn {
   padding: 5px 20px 5px 20px;
   box-sizing: border-box;
-  width: 50%;
+  width: 75%;
 }
 
 .search-btn {
@@ -128,10 +128,15 @@ button:hover {
   vertical-align: middle;
 }
 
-#search-input {
-  width: 25%;
+#search-city {
+  width: 50%;
 }
 
 #search-btn {
   width: 25%;
+}
+
+#current-temp {
+  font-size: 20px;
+  font-family: "Times New Roman", Times, serif;
 }
